--- a/src/game/.gitignore
+++ b/src/game/.gitignore
@@ -9,3 +9,11 @@
 /Room.class
 /Room$Exit.class
 /GameCharacter.class
+/WolgonFrame$AlignmentLocation.class
+/WolgonFrame$Label.class
+/WolgonFrame.class
+/WolgonFrame$1.class
+/WolgonFrame$2.class
+/WolgonPanel$3.class
+/WolgonPanel$Zone.class
+/WolgonPanel$4.class
