--- a/src/game/.gitignore
+++ b/src/game/.gitignore
@@ -17,3 +17,26 @@
 /WolgonPanel$3.class
 /WolgonPanel$Zone.class
 /WolgonPanel$4.class
+/WolgonPanel$Positioner.class
+/WorldPanel$1.class
+/WorldPanel$2.class
+/WorldPanel$3.class
+/WorldPanel$4.class
+/WorldPanel$AlignmentLocation.class
+/WorldPanel$Label.class
+/WorldPanel$Positioner.class
+/WorldPanel$Zone.class
+/WorldPanel.class
+/EventPanel.class
+/MenuPanel.class
+/WolgonPanel$Button.class
+/Zone.class
+/Label.class
+/Button.class
+/IPositioner.class
+/AlignmentLocation.class
+/AWolgonPanel$1.class
+/AWolgonPanel$2.class
+/AWolgonPanel$3.class
+/AWolgonPanel$4.class
+/AWolgonPanel.class
