Much progress, ft. a typewriter
Effects are in using the power of subclasses (wow)

- TypewriterLabels have been added
- UserTypeLabels, robust labels with user typing functionality (as
opposed to the old hard coded thing with a function on Main (???).
- Buttons which can be clicked via mouse
- Buttons have hover-over-text. A label can be designated for a
WolgonPanel as the label in which hover-over-text will be displayed if
applicable. Allows for elegant menus, reduced clutter.

TODO
- remove the exit buttons when curRoom changes (so they can be replaced)
- redo and overhaul the implementation of zones
- figure out why typing only registers on the title panel

--- a/src/game/.gitignore
+++ b/src/game/.gitignore
@@ -40,3 +40,10 @@
 /AWolgonPanel$3.class
 /AWolgonPanel$4.class
 /AWolgonPanel.class
+/TypewriterLabel.class
+/UserTypeLabel.class
+/ButtonFunction.class
+/MenuPanel$1.class
+/TitlePanel.class
+/TitlePanel$1.class
+/Room$Exit$1.class
