--- a/src/game/.gitignore
+++ b/src/game/.gitignore
@@ -47,3 +47,13 @@
 /TitlePanel.class
 /TitlePanel$1.class
 /Room$Exit$1.class
+/ZoneManager.class
+/Zone$ZoneAbstractionFunctionObject.class
+/Positioner.class
+/Zone$ZoneFunctionObject.class
+/Rectangle.class
+/IRectangle.class
+/Zone$1.class
+/Zone$2.class
+/Zone$3.class
+/Zone$4.class
